@@ -1,6 +1,6 @@
 //////////////////////////////////////////////////////////////////////////
 //
-//  Copyright (c) 2011-2012, Image Engine Design Inc. All rights reserved.
+//  Copyright (c) 2011-2013, Image Engine Design Inc. All rights reserved.
 //  Copyright (c) 2012, John Haddon. All rights reserved.
 //
 //  Redistribution and use in source and binary forms, with or without
@@ -154,6 +154,9 @@ class Renderer : public IECore::Renderer
 
 		virtual IECore::DataPtr command( const std::string &name, const IECore::CompoundDataMap &parameters );
 
+		virtual void editBegin( const std::string &editType, const IECore::CompoundDataMap &parameters );
+		virtual void editEnd();
+		
 		/// May be called when this renderer is being used to run a procedural, to return the number of
 		/// Arnold nodes created by the procedural.
 		size_t numProceduralNodes() const;
