@@ -1,6 +1,6 @@
 //////////////////////////////////////////////////////////////////////////
 //
-//  Copyright (c) 2010, Image Engine Design Inc. All rights reserved.
+//  Copyright (c) 2010-2013, Image Engine Design Inc. All rights reserved.
 //
 //  Redistribution and use in source and binary forms, with or without
 //  modification, are permitted provided that the following conditions are
@@ -109,6 +109,9 @@ class SXRendererImplementation : public IECore::Renderer
 		virtual void instance( const std::string &name );
 
 		virtual IECore::DataPtr command( const std::string &name, const IECore::CompoundDataMap &parameters );
+		
+		virtual void editBegin( const std::string &editType, const IECore::CompoundDataMap &parameters );
+		virtual void editEnd();
 		
 		IECore::CompoundDataPtr shade( const IECore::CompoundData *points ) const;
 		IECore::CompoundDataPtr shade( const IECore::CompoundData *points, const Imath::V2i &gridSize ) const;
