@@ -2006,6 +2006,16 @@ IECore::DataPtr IECoreGL::Renderer::command( const std::string &name, const IECo
 	return 0;
 }
 
+void IECoreGL::Renderer::editBegin( const std::string &name, const IECore::CompoundDataMap &parameters )
+{
+	msg( Msg::Warning, "Renderer::editBegin", "Not implemented" );
+}
+
+void IECoreGL::Renderer::editEnd()
+{
+	msg( Msg::Warning, "Renderer::editEnd", "Not implemented" );
+}
+
 IECoreGL::ShaderLoader *IECoreGL::Renderer::shaderLoader()
 {
 	return m_data->shaderLoader;
