@@ -1,6 +1,6 @@
 //////////////////////////////////////////////////////////////////////////
 //
-//  Copyright (c) 2007-2012, Image Engine Design Inc. All rights reserved.
+//  Copyright (c) 2007-2013, Image Engine Design Inc. All rights reserved.
 //
 //  Redistribution and use in source and binary forms, with or without
 //  modification, are permitted provided that the following conditions are
@@ -49,7 +49,7 @@ Renderer::Renderer( const std::string &name )
 {
 }
 
-Renderer::Renderer( IECore::RendererPtr implementation )
+Renderer::Renderer( RendererImplementationPtr implementation )
 	:	m_implementation( implementation )
 {
 }
@@ -246,4 +246,14 @@ void Renderer::instance( const std::string &name )
 IECore::DataPtr Renderer::command( const std::string &name, const IECore::CompoundDataMap &parameters )
 {
 	return m_implementation->command( name, parameters );
+}
+
+void Renderer::editBegin( const std::string &name, const IECore::CompoundDataMap &parameters )
+{
+	m_implementation->editBegin( name, parameters );
+}
+
+void Renderer::editEnd()
+{
+	m_implementation->editEnd();
 }
